--- a/src/components/_promotions.html
+++ b/src/components/_promotions.html
@@ -49,7 +49,7 @@
 
                         <time datetime="13.12.2023" class="promotions__card-date"> до 13.12.2023 </time>
 
-                        <p class="promotions__card-description h h_h3">
+                        <p class="promotions__card-description h h_h3 _desktop-only">
                             «Ваза в каждый дом» — скидки 8% на весь ассортименте
                         </p>
                     </div>
@@ -57,6 +57,10 @@
                     <figure class="promotions__card-image">
                         <img src="../assets/images/sections/promotions/promotion-card-image.png" alt="" />
                     </figure>
+
+                    <p class="promotions__card-description h h_h3 _mobile-only">
+                        «Ваза в каждый дом» — скидки 8% на весь ассортименте
+                    </p>
                 </li>
                 <li class="promotions__card">
                     <div class="promotions__card-info">
@@ -98,7 +102,7 @@
 
                         <time datetime="13.12.2023" class="promotions__card-date"> до 13.12.2023 </time>
 
-                        <p class="promotions__card-description h h_h3">
+                        <p class="promotions__card-description h h_h3 _desktop-only">
                             «Ваза в каждый дом» — скидки 8% на весь ассортименте
                         </p>
                     </div>
@@ -106,10 +110,15 @@
                     <figure class="promotions__card-image">
                         <img src="../assets/images/sections/promotions/promotion-card-image-2.png" alt="" />
                     </figure>
+
+                    <p class="promotions__card-description h h_h3 _mobile-only">
+                        «Ваза в каждый дом» — скидки 8% на весь ассортименте
+                    </p>
                 </li>
                 <li class="promotions__card --large">
                     <figure class="promotions__card-image">
-                        <img src="../assets/images/sections/promotions/large-image.png" alt="" />
+                        <img src="../assets/images/sections/promotions/large-image.png" alt="" class="_desktop-only"/>
+                        <img src="../assets/images/sections/promotions/large-image-mobile.png" alt="" class="_mobile-only"/>
                     </figure>
 
                     <h2 class="promotions__card-title h h_h1">Коробки для цветов в ассортименте</h2>
@@ -162,7 +171,7 @@
 
                         <time datetime="13.12.2023" class="promotions__card-date"> до 13.12.2023 </time>
 
-                        <p class="promotions__card-description h h_h3">
+                        <p class="promotions__card-description h h_h3 _desktop-only">
                             «Ваза в каждый дом» — скидки 8% на весь ассортименте
                         </p>
                     </div>
@@ -170,6 +179,10 @@
                     <figure class="promotions__card-image">
                         <img src="../assets/images/sections/promotions/promotion-card-image.png" alt="" />
                     </figure>
+
+                    <p class="promotions__card-description h h_h3 _mobile-only">
+                        «Ваза в каждый дом» — скидки 8% на весь ассортименте
+                    </p>
                 </li>
                 <li class="promotions__card">
                     <div class="promotions__card-info">
@@ -211,7 +224,7 @@
 
                         <time datetime="13.12.2023" class="promotions__card-date"> до 13.12.2023 </time>
 
-                        <p class="promotions__card-description h h_h3">
+                        <p class="promotions__card-description h h_h3 _desktop-only">
                             «Ваза в каждый дом» — скидки 8% на весь ассортименте
                         </p>
                     </div>
@@ -219,6 +232,10 @@
                     <figure class="promotions__card-image">
                         <img src="../assets/images/sections/promotions/promotion-card-image-3.png" alt="" />
                     </figure>
+
+                    <p class="promotions__card-description h h_h3 _mobile-only">
+                        «Ваза в каждый дом» — скидки 8% на весь ассортименте
+                    </p>
                 </li>
                 <li class="promotions__card">
                     <div class="promotions__card-info">
@@ -260,7 +277,7 @@
 
                         <time datetime="13.12.2023" class="promotions__card-date"> до 13.12.2023 </time>
 
-                        <p class="promotions__card-description h h_h3">
+                        <p class="promotions__card-description h h_h3 _desktop-only">
                             «Ваза в каждый дом» — скидки 8% на весь ассортименте
                         </p>
                     </div>
@@ -268,6 +285,10 @@
                     <figure class="promotions__card-image">
                         <img src="../assets/images/sections/promotions/promotion-card-image.png" alt="" />
                     </figure>
+
+                    <p class="promotions__card-description h h_h3 _mobile-only">
+                        «Ваза в каждый дом» — скидки 8% на весь ассортименте
+                    </p>
                 </li>
                 <li class="promotions__card">
                     <div class="promotions__card-info">
@@ -309,7 +330,7 @@
 
                         <time datetime="13.12.2023" class="promotions__card-date"> до 13.12.2023 </time>
 
-                        <p class="promotions__card-description h h_h3">
+                        <p class="promotions__card-description h h_h3 _desktop-only">
                             «Ваза в каждый дом» — скидки 8% на весь ассортименте
                         </p>
                     </div>
@@ -317,6 +338,10 @@
                     <figure class="promotions__card-image">
                         <img src="../assets/images/sections/promotions/promotion-card-image-2.png" alt="" />
                     </figure>
+
+                    <p class="promotions__card-description h h_h3 _mobile-only">
+                        «Ваза в каждый дом» — скидки 8% на весь ассортименте
+                    </p>
                 </li>
             </ul>
         </div>
